@@ -1,6 +1,6 @@
 ﻿## Interface: 50400
 ## Author: Benik
-## Version: 1.02
+## Version: 1.04
 ## Title: |cff1784d1ElvUI|r_BenikUI
 ## Notes: an ElvUI 6+ edit
 ## RequiredDeps: ElvUI
