@@ -71,8 +71,7 @@ L["Change the detached portrait width"] = true
 L["Change the detached portrait height"] = true
 L["Player Size"] = true
 L["Copy Player portrait width and height"] = true
-L["BenikUI DataTexts"] = true
-L["Show/Hide BenikUI DataTexts."] = true
+L["Show/Hide Chat DataTexts. ElvUI chat datatexts must be disabled"] = true
 L["Hide text values"] = true
 L["Hides health, power and custom text values when mousing over, if their yOffset is"] = true
 L["Force BenikUI fonts"] = true
